Fix the fling event behavior for browser window.

Currently there is no fling event for browser window in tablet mode.
We'll add fling event handling for browser window in tablet mode later.

Bug: 881618
Change-Id: I683458455449fb2fe8e903e503c49072c917dc2f
Reviewed-on: https://chromium-review.googlesource.com/1212084
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589571}
Former-commit-id: 46f0e45b394d0107a4774e8ed2cf78b71e3aeb2b